task3-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: demo
  labels:
    app: redis-server
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  clusterIP: None
  selector:
    app: redis-server
