task3-redis-server-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: redis-server-service
  namespace: demo
spec:
  selector:
    app: redis-server-service
  type: ClusterIP
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 6379
